--- a/docs/stories/1.4.data-normalization-utility.md
+++ b/docs/stories/1.4.data-normalization-utility.md
@@ -1,57 +1,61 @@
 # Story 1.4: Data Normalization Utility
 
 ## Status
-Ready
+Draft
 
 ## Story
 **As a** developer,
 **I want** a utility function to normalize varying data formats from different sources,
 **so that** plan data (scraped arrays, structured objects, API responses) can be compared consistently.
 
+**Note:** This story will be implemented AFTER collecting real data from multiple telco websites (Story 2.2) to understand actual format variations. Cannot assume data formats in advance.
+
+## Dependencies
+- Story 1.1: Project Initialization (Done)
+- Story 1.2: Neon Database Connection (Done)
+- Story 1.3: Playwright Scraper POC (Done)
+- Story 2.2: Data Collectors - Telcos (Must be completed first to gather real data formats)
+
 ## Acceptance Criteria
 
-1. Utility function normalizes data allowances (e.g., "Unlimited", "100GB", "100 GB" → standardized format)
-2. Utility function normalizes pricing (e.g., "£10/mo", "10 GBP per month", "£10 a month" → standardized format)
-3. Handles multiple input formats:
-   - Scraped text arrays (e.g., O2, Sky format: `["plan name", "£10", "100GB", ...]`)
-   - Structured objects (e.g., Vodafone format: `{ name, description, details, extendedDetails }`)
-   - API JSON responses (e.g., Smarty, Uswitch format: structured JSON with nested properties)
-4. Unit tests cover common format variations across all source types
+## Acceptance Criteria
+
+**Note:** These ACs are preliminary and will be refined after Story 2.2 completion based on actual data format variations discovered during telco website scraping.
+
+1. Utility function normalizes data allowances based on ACTUAL formats found (e.g., "Unlimited", "100GB", "100 GB" → standardized format)
+2. Utility function normalizes pricing based on ACTUAL formats found (e.g., "£10/mo", "10 GBP per month", "£10 a month" → standardized format)
+3. Handles multiple input formats discovered from real scraping:
+   - Scraped text arrays (actual O2, Sky formats discovered)
+   - Structured objects (actual Vodafone formats discovered)
+   - API JSON responses (actual Smarty, Uswitch formats)
+4. Unit tests cover ACTUAL format variations found across all source types
 5. Function handles edge cases (null, undefined, malformed inputs, missing fields) gracefully
 6. Documentation of normalization rules and assumptions per source type
 
 ## Tasks / Subtasks
 
+**Tasks will be defined after Story 2.2 completion when real data formats are known.**
+
+Preliminary task outline:
+- [ ] Analyze real data formats from Story 2.2 (AC: 1, 2, 3)
+  - [ ] Review O2 scraper output formats
+  - [ ] Review Sky scraper output formats
+  - [ ] Review Vodafone scraper output formats
+  - [ ] Review Smarty API response formats
+  - [ ] Document all format variations discovered
 - [ ] Create normalization utility file (AC: 1, 2, 3)
   - [ ] Create `src/lib/scraping/normalize.ts`
-  - [ ] Implement `normalizeDataAllowance()` function
-  - [ ] Implement `normalizePrice()` function
-  - [ ] Create main `normalizePlanData()` function
-- [ ] Implement data allowance normalization (AC: 1)
-  - [ ] Handle "Unlimited" → standardized format
-  - [ ] Handle "100GB", "100 GB" → standardized format
-  - [ ] Handle other variations
-- [ ] Implement price normalization (AC: 2)
-  - [ ] Handle "£10/mo" → number
-  - [ ] Handle "10 GBP per month" → number
-  - [ ] Handle "£10 a month" → number
-  - [ ] Extract numeric value in GBP
-- [ ] Handle multiple input formats (AC: 3)
-  - [ ] Support scraped text arrays (O2, Sky format)
-  - [ ] Support structured objects (Vodafone format)
-  - [ ] Support API JSON responses (Smarty, Uswitch format)
-  - [ ] Create type definitions for input formats
+  - [ ] Implement data normalization functions based on actual formats
+  - [ ] Create main normalization orchestration function
 - [ ] Write unit tests (AC: 4)
   - [ ] Create `src/lib/scraping/__tests__/normalize.test.ts`
-  - [ ] Test data allowance normalization variations
-  - [ ] Test price normalization variations
-  - [ ] Test all input format types
-  - [ ] Achieve good test coverage
+  - [ ] Test ACTUAL data format variations discovered
+  - [ ] Achieve 60%+ test coverage
 - [ ] Handle edge cases (AC: 5)
   - [ ] Handle null/undefined inputs
   - [ ] Handle malformed inputs
   - [ ] Handle missing fields
-  - [ ] Add appropriate error handling
+  - [ ] Add appropriate error handling (fail fast)
 - [ ] Document normalization rules (AC: 6)
   - [ ] Document rules per source type
   - [ ] Document assumptions
@@ -59,27 +63,37 @@ Ready
 
 ## Dev Notes
 
+**Important:** This story is data-driven. Implementation approach will be determined AFTER reviewing actual data collected in Story 2.2.
+
 ### Source Tree
-- Normalization utility: `src/lib/scraping/normalize.ts`
+- Normalization utility: `src/lib/scraping/normalize.ts` (if needed after data analysis)
 - Type definitions: Co-located with utility or `src/types/plan.ts` if needed
 - Test file: `src/lib/scraping/__tests__/normalize.test.ts` (co-located)
 
 ### Technical Stack
 - TypeScript for type safety
-- Utility functions for data transformation
-- Support for multiple input formats
+- Utility functions for data transformation (if refactoring needed)
+- Support for multiple input formats discovered in Story 2.2
 
 ### Testing
 - Test file location: `src/lib/scraping/__tests__/normalize.test.ts`
 - Test framework: Vitest (aligned with Stories 1.2, 1.3)
 - Coverage target: 60%+ for critical business logic
-- Test all format variations and edge cases
+- Test ACTUAL format variations discovered in Story 2.2
+
+### Implementation Approach
+1. Complete Story 2.2 first (collect data from all telco sources)
+2. Analyze actual data format variations
+3. Determine if normalization utility is needed or if inline handling is sufficient
+4. If needed, design normalization strategy based on real patterns
+5. Implement with fail-fast error handling (no retry logic)
 
 ## Change Log
 
 | Date | Version | Description | Author |
 |------|---------|-------------|--------|
 | 2025-01-XX | 1.0 | Story extracted from PRD | Architect |
+| 2025-11-17 | 1.1 | Moved to Draft, repositioned after Story 2.2, updated to be data-driven refactoring story | PM Agent (John) |
 
 ## Dev Agent Record
 
