Base line for story 2.2

--- a/docs/stories/1.4.data-normalization-utility.md
+++ b/docs/stories/1.4.data-normalization-utility.md
@@ -1,43 +1,103 @@
-# Story 1.4: Data Normalization Utility
+# Story 1.4: Data Normalization Utility - Refactoring & Enhancement
 
 ## Status
 Draft
 
 ## Story
 **As a** developer,
-**I want** a utility function to normalize varying data formats from different sources,
-**so that** plan data (scraped arrays, structured objects, API responses) can be compared consistently.
+**I want** to refactor and enhance the existing normalization utility based on production experience,
+**so that** normalization logic is optimized, maintainable, and handles edge cases discovered in real usage.
 
-**Note:** This story will be implemented AFTER collecting real data from multiple telco websites (Story 2.2) to understand actual format variations. Cannot assume data formats in advance.
+**Note:** This story refines the normalization layer initially created in Story 2.5. It focuses on improvements based on actual production data and usage patterns.
 
 ## Dependencies
-- Story 1.1: Project Initialization (Done)
-- Story 1.2: Neon Database Connection (Done)
-- Story 1.3: Playwright Scraper POC (Done)
-- Story 2.2: Data Collectors - Telcos (Must be completed first to gather real data formats)
+- Story 2.1: Database Schema Design (Done)
+- Story 2.2: Data Collectors - Telcos (Must complete first)
+- Story 2.3: Uswitch API Integration (Must complete first)
+- Story 2.4: Unified Data Collection (Must complete first)
+- Story 2.5: Data Normalization Before Storage (Must complete first - provides initial normalization layer)
+
+**Positioning:** This story comes AFTER Epic 2 (Data Collection) is complete, before Epic 3 (LLM Analysis). It's a refactoring/improvement story based on real-world experience.
+
+## Relationship to Story 2.5
+
+**Story 2.5** (Data Normalization Before Storage):
+- Created initial normalization layer for immediate use
+- Implemented during Epic 2 (after data collection, before storage)
+- Focus: Get normalization working with discovered data formats
+- Output: Working normalize() function that populates plan_data and plan_key
+
+**Story 1.4** (this story - Refactoring):
+- Refines/improves Story 2.5 normalization based on production usage
+- Implemented after Epic 2 complete, before Epic 3
+- Focus: Optimize performance, improve error handling, enhance plan_key generation
+- Output: Enhanced normalization with lessons learned from production data
 
 ## Acceptance Criteria
 
-## Acceptance Criteria
+**Note:** These ACs will be refined after Story 2.5 completion based on actual performance and edge cases encountered.
 
-**Note:** These ACs are preliminary and will be refined after Story 2.2 completion based on actual data format variations discovered during telco website scraping.
+**Note:** These ACs will be refined after Story 2.5 completion based on actual performance and edge cases encountered.
 
-1. Utility function normalizes data allowances based on ACTUAL formats found (e.g., "Unlimited", "100GB", "100 GB" → standardized format)
-2. Utility function normalizes pricing based on ACTUAL formats found (e.g., "£10/mo", "10 GBP per month", "£10 a month" → standardized format)
-3. Handles multiple input formats discovered from real scraping:
-   - Scraped text arrays (actual O2, Sky formats discovered)
-   - Structured objects (actual Vodafone formats discovered)
-   - API JSON responses (actual Smarty, Uswitch formats)
-4. Unit tests cover ACTUAL format variations found across all source types
-5. Function handles edge cases (null, undefined, malformed inputs, missing fields) gracefully
-6. Documentation of normalization rules and assumptions per source type
+1. Refactor normalization logic for better performance:
+   - Optimize data allowance normalization (reduce regex operations)
+   - Optimize pricing normalization (cache conversion rates if needed)
+   - Improve plan_key generation efficiency
+2. Enhance error handling based on production issues discovered:
+   - Handle new edge cases found in production data
+   - Improve logging for debugging
+   - Add retry logic for transient failures (if patterns emerge)
+3. Improve plan_key generation based on real-world duplicates:
+   - Refine algorithm to reduce collisions
+   - Handle promotional plans more accurately
+   - Document plan_key generation rules comprehensively
+4. Add performance monitoring:
+   - Track normalization execution time
+   - Identify slow normalization operations
+   - Optimize bottlenecks
+5. Enhance testing based on production data:
+   - Add test cases for edge cases discovered in production
+   - Improve test coverage to 90%+
+   - Add performance benchmarks
+6. Documentation improvements:
+   - Update normalization rules based on production experience
+   - Add troubleshooting guide for common issues
+   - Document performance characteristics
 
 ## Tasks / Subtasks
 
-**Tasks will be defined after Story 2.2 completion when real data formats are known.**
+**Tasks will be defined after Story 2.5 completion when production experience is available.**
 
 Preliminary task outline:
-- [ ] Analyze real data formats from Story 2.2 (AC: 1, 2, 3)
+- [ ] Analyze Story 2.5 normalization performance in production (AC: 1, 4)
+  - [ ] Collect metrics on normalization execution time
+  - [ ] Identify performance bottlenecks
+  - [ ] Review error logs for patterns
+- [ ] Refactor normalization logic (AC: 1)
+  - [ ] Optimize data allowance normalization
+  - [ ] Optimize pricing normalization
+  - [ ] Improve plan_key generation algorithm
+  - [ ] Add performance benchmarks
+- [ ] Enhance error handling (AC: 2)
+  - [ ] Add handling for production edge cases
+  - [ ] Improve error logging
+  - [ ] Consider retry logic if needed
+- [ ] Improve plan_key generation (AC: 3)
+  - [ ] Analyze plan_key collisions in production
+  - [ ] Refine generation algorithm
+  - [ ] Update documentation
+- [ ] Add monitoring (AC: 4)
+  - [ ] Instrument normalization with timing metrics
+  - [ ] Add structured logging for performance
+  - [ ] Create performance dashboard/alerts
+- [ ] Enhance testing (AC: 5)
+  - [ ] Add test cases for production edge cases
+  - [ ] Improve coverage to 90%+
+  - [ ] Add performance benchmarks to test suite
+- [ ] Update documentation (AC: 6)
+  - [ ] Document lessons learned
+  - [ ] Create troubleshooting guide
+  - [ ] Update normalization rules
   - [ ] Review O2 scraper output formats
   - [ ] Review Sky scraper output formats
   - [ ] Review Vodafone scraper output formats
@@ -63,16 +123,17 @@ Preliminary task outline:
 
 ## Dev Notes
 
-**Important:** This story is data-driven. Implementation approach will be determined AFTER reviewing actual data collected in Story 2.2.
+**Important:** This story refines the normalization implemented in Story 2.5. Focus is on optimization and enhancement based on production experience.
 
 ### Source Tree
-- Normalization utility: `src/lib/scraping/normalize.ts` (if needed after data analysis)
-- Type definitions: Co-located with utility or `src/types/plan.ts` if needed
+- Normalization utility: `src/lib/scraping/normalize.ts` (created in Story 2.5, enhanced here)
 - Test file: `src/lib/scraping/__tests__/normalize.test.ts` (co-located)
+- Performance monitoring: Added instrumentation to existing functions
 
 ### Technical Stack
 - TypeScript for type safety
-- Utility functions for data transformation (if refactoring needed)
+- Performance profiling tools
+- Enhanced structured logging
 - Support for multiple input formats discovered in Story 2.2
 
 ### Testing
@@ -94,6 +155,7 @@ Preliminary task outline:
 |------|---------|-------------|--------|
 | 2025-01-XX | 1.0 | Story extracted from PRD | Architect |
 | 2025-11-17 | 1.1 | Moved to Draft, repositioned after Story 2.2, updated to be data-driven refactoring story | PM Agent (John) |
+| 2025-01-17 | 1.2 | Redefined as refactoring/enhancement story after Story 2.5. Focus changed from initial normalization (now Story 2.5) to optimization and improvement based on production experience | PM Agent (John) |
 
 ## Dev Agent Record
 
