--- a/docs/stories/2.2.data-collectors-telcos.md
+++ b/docs/stories/2.2.data-collectors-telcos.md
@@ -156,15 +156,19 @@ _To be populated by Dev Agent_
   - All insertions set `plan_key=NULL` (normalization in Story 2.5)
 
 **Collector Implementations:**
-- `src/lib/scraping/collectors/o2.ts` - Full Playwright implementation
+- `src/lib/scraping/collectors/o2.ts` - ✅ Full Playwright implementation
   - `scrapeAndStoreO2Plans()` - Scrapes 3 contract lengths (1/12/24 months)
   - Returns count of inserted plans (33 plans typical)
+- `src/lib/scraping/collectors/smarty.ts` - ✅ Full API implementation
+  - `scrapeAndStoreSmartyPlans()` - Fetches from Smarty REST API
+  - Returns count of inserted plans (32 plans typical)
+  - Uses fetch with proper headers for API authentication
+  - Maps API response to PlanData format with standard benefits
 - `src/lib/scraping/collectors/vodafone.ts` - **STUB** - TODO: Playwright implementation
 - `src/lib/scraping/collectors/sky.ts` - **STUB** - TODO: Playwright implementation
 - `src/lib/scraping/collectors/tesco.ts` - **STUB** - TODO: Playwright implementation
 - `src/lib/scraping/collectors/three.ts` - **STUB** - TODO: Playwright implementation
 - `src/lib/scraping/collectors/giffgaff.ts` - **STUB** - TODO: Playwright implementation
-- `src/lib/scraping/collectors/smarty.ts` - **STUB** - TODO: API-based implementation
 
 **Orchestration:**
 - `src/scripts/scrape-telcos.ts` - Runs all 7 collectors sequentially
@@ -188,18 +192,20 @@ _To be populated by Dev Agent_
 
 ## Implementation Notes
 
-**Status:** ✅ Infrastructure Complete | ⏳ 6 Collectors Pending Full Implementation
+**Status:** ✅ Infrastructure Complete | ✅ 2 Collectors Working | ⏳ 5 Collectors Pending
 
 **Completed:**
 - Database helper functions with transaction support
-- O2 collector fully working (33 plans from 3 contract lengths)
+- O2 collector fully working (33 plans from 3 contract lengths) - Playwright
+- Smarty collector fully working (32 plans from REST API) - API-based
 - All 7 collector stubs with consistent interface
 - Orchestration script with error handling and reporting
 - 8 database tests (all passing)
 - Verification utility for database inspection
+- Fixed JSONB query test for unique test data
 
 **Pending Work:**
-Each of the 6 stub collectors needs:
+Each of the 5 remaining stub collectors needs:
 1. Research target website structure (inspect HTML/CSS selectors)
 2. Implement Playwright navigation and cookie consent handling
 3. Extract plan data fields (name, price, data_allowance, contract_term, extras)
@@ -207,21 +213,42 @@ Each of the 6 stub collectors needs:
 5. Add error handling and logging
 6. Write collector-specific tests
 
-**For Smarty:** API-based approach instead of Playwright scraping.
+**Smarty Implementation Details:**
+- **API Endpoint:** `https://smarty.co.uk/api/v3/plans`
+- **Authentication:** None required (public API)
+- **Request Headers:** Mimics browser request with User-Agent, referer, sec-fetch headers
+- **Response Structure:** Nested JSON with `data.attributes.plans[]` array
+- **Plan Count:** 32 plans (mix of Classic and Data-only categories)
+- **Standard Benefits:** All plans include 7 standard Smarty benefits in `extras` field:
+  - Cancel or change anytime
+  - No annual price rises
+  - No credit check
+  - Plan benefits
+  - Unlimited call and texts, WIFI calling
+  - Fast 5G and 4G data
+  - EU Roaming: 12GB fair use limit
+- **Data Mapping:**
+  - `name` ← `plan.name`
+  - `price` ← `£{plan.finalPrice.value}/month`
+  - `data_allowance` ← `{plan.dataAllowanceGB}GB` or "Unlimited"
+  - `contract_term` ← "1 month" (Smarty is rolling monthly)
+  - `extras` ← Standard benefits array
+  - Additional fields: `plan_id`, `category`, `category_type`, `description`, `slug`
 
 **Design Decisions:**
 - **Raw Data Storage:** Plans stored without normalization, `plan_key=NULL`
 - **Transaction Safety:** Batch inserts use transactions, rollback on error
-- **Incremental Implementation:** O2 working + 6 stubs allows realistic phasing
+- **Incremental Implementation:** O2 + Smarty working, 5 stubs allows realistic phasing
 - **Consistent Interface:** All collectors follow `scrapeAndStore{Telco}Plans()` pattern
 - **Sequential Execution:** Collectors run one at a time (avoid rate limiting)
 - **Graceful Degradation:** One collector failure doesn't stop others
+- **API vs Playwright:** Smarty uses fetch API (faster, more reliable than scraping)
 
 **Test Results:**
 ```
 ✅ 60/60 tests passing
   - 19 schema tests
-  - 13 connection tests  
+  - 13 connection tests
   - 20 O2 collector tests
   - 8 database operation tests
 ```
@@ -229,8 +256,10 @@ Each of the 6 stub collectors needs:
 **Database Verification:**
 ```
 O2: 33 plans inserted
-Plan Key: 0/33 have keys (all NULL as expected)
-Sample data: Raw JSONB preserved correctly
+Smarty: 32 plans inserted
+Total: 65 plans
+Plan Keys: 0/65 have keys (all NULL as expected)
+Sample data: Raw JSONB preserved correctly, all 7 standard benefits in Smarty plans
 ```
 
 ## QA Results
